# miraclecast

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  Dockerfile  LICENSE_gdhcp  Makefile.am  NEWS  README  README.md  autogen.sh  autotools.Dockerfile  cmake.Dockerfile  common.am  config.h.cmake  configure.ac  gcc14.Dockerfile  gcc15.Dockerfile  install.sh  meson.Dockerfile  meson.build  meson_options.txt  miraclecast.spec  test.supp
.github/workflows/: gcc.yml
.semaphore/: semaphore.yml
cmake/: FindVala.cmake  ValaPrecompile.cmake
debian/: changelog  control  copyright  miraclecast.links  rules
demo/: CMakeLists.txt  meson.build  miracle-wfd.vala  org-freedesktop-miracle-wfd.vala  org-freedesktop-miracle-wifi.vala  org-freedesktop-networkmanager.vala  sigint.h  sigint.vapi  wfdctl.vala
demo/dbus/: org.freedesktop.NetworkManager.Devices.xml  org.freedesktop.miracle.wfd.xml  org.freedesktop.miracle.wifi.xml
demo/res/: wfdctl-res.xml  wfdctl.ui
res/: .miraclecast  CMakeLists.txt  Makefile.am  create-symlinks  dispctl.vala  gstencoder.vala  gstplayer  install-scripts  kill-wpa.sh  meson.build  miracle-dispd.service.cmake  miracle-dispd.service.in  miracle-gst  miracle-gst.sh  miracle-omxplayer  miracle-sinkctl  miracle-start-network-manager  miracle-stop-network-manager  miracle-utils.sh  miracle-vlc  miracle-wfdctl-demo  miracle-wfdctl.service.cmake  miracle-wifi.sh  miracle-wifictl  miracle-wifid  miracle-wifid.service.cmake  miracle-wifid.service.in  miraclecast-ci.Dockerfile  miraclecast-completion  miraclecast.sh  miraclecast.spec  miraclecast.spec-README.md  networkmanager.vala  normal-wifi.sh  org.freedesktop.miracle.Sender.service.cmake  org.freedesktop.miracle.conf  org.freedesktop.miracle.service.cmake  org.freedesktop.miracle.wfd.service.cmake  org.freedesktop.miracle.wfd.service.in  org.freedesktop.miracle.wifi.service.cmake  (+13 more)
src/: CMakeLists.txt  Makefile.am  meson.build  miracle-dhcp.c  miracle.h  miraclectl.c  miracled-dbus.c  miracled-link.c  miracled-peer.c  miracled-wifi.c  miracled-wifi.h  miracled.c  miracled.h  shl_log.c  shl_macro.h  shl_util.c  shl_util.h
src/ctl/: .ctl-sink.c.swo  CMakeLists.txt  Makefile.am  ctl-cli.c  ctl-sink.c  ctl-sink.h  ctl-src.c  ctl-src.h  ctl-wifi.c  ctl.h  meson.build  sinkctl.c  srcctl.c  wfd-arg.c  wfd-arg.h  wfd-arg.inc  wfd-dbus.c  wfd-dbus.h  wfd-out-session.c  wfd-session.c  wfd-session.h  wfd-sink.c  wfd-src.c  wfd-src.h  wfd.c  wfd.h  wfdctl.c  wifictl.c
src/dhcp/: CMakeLists.txt  Makefile.am  client.c  common.c  common.h  dhcp.c  gdhcp.h  ipv4ll.c  ipv4ll.h  meson.build  server.c  unaligned.h
src/disp/: CMakeLists.txt  disp.h  dispd-arg.c  dispd-arg.h  dispd-arg.inc  dispd-dbus.c  dispd-dbus.h  dispd-encoder.c  dispd-encoder.h  dispd-out-session.c  dispd-session.c  dispd-session.h  dispd-sink.c  dispd.c  dispd.h  meson.build  wfd-arg.h  wfd-arg.inc  wfd-dbus.c  wfd-out-session.c  wfd-session.c  wfd-session.h  wfd-sink.c
src/gdhcp/: client.c  common.c  common.h  gdhcp.h  ipv4ll.c  server.c
src/shared/: CMakeLists.txt  Makefile.am  meson.build  rtsp.c  rtsp.h  shl_dlist.h  shl_htable.c  shl_htable.h  shl_log.c  shl_log.h  shl_macro.h  shl_ring.c  shl_ring.h  shl_util.c  shl_util.h  util.h  wpas.c  wpas.h
src/stream/: CMakeLists.txt  sender-iface.xml  sender.c  sender.h  sender.py
src/uibc/: CMakeLists.txt  Makefile.am  meson.build  miracle-uibcctl.c  uibcctl.c  uibcctl.h
src/wifi/: CMakeLists.txt  Makefile.am  meson.build  wifid-dbus.c  wifid-link.c  wifid-peer.c  wifid-supplicant.c  wifid.c  wifid.h
systemd/system/: miracle-sink.service  miracle-wifid.service
test/: CMakeLists.txt  Makefile.am  meson.build  test_common.h  test_rtsp.c  test_valgrind.c  test_wpas.c
