option('build-enable-debug',
  type: 'boolean',
  value: true,
  description: 'Enable Debug')
option('rely-udev',
  type: 'boolean',
  value: false,
  description: 'Rely in udev tag to select device')
option('build-tests',
  type: 'boolean',
  value: true,
  description: 'Enable TEST')
option('ip-binary',
  type: 'string',
  value: '/bin/ip',
  description: 'Path for ip binary')
option('enable-systemd',
  type: 'boolean',
  value: 'true',
  description: 'Enable systemd')
